Bug 646819 - Fix incorrect position calculation in nsWaveDecoder::DecodeAudioData causing OOM - r=kinetik